# myapp-p2pchat

./: Cargo.toml  LICENSE  README.md  check.sh  clean.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml
appcore/: Cargo.toml
appcore/src/: lib.rs
appcore/src/database/: mod.rs
chat_core/: Cargo.toml
chat_core/rootcell/: Cargo.toml
chat_core/rootcell/src/: lib.rs
chat_core/rootcell/src/platform/: mod.rs
chat_core/src/: lib.rs
chat_core/src/storage/: mod.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  notui.rs  tui.rs
dist-isolation/: index.html  index.js
public/: App.css  myweb.html
rootcell/: Cargo.toml
src/: App.css  App.tsx  ChatInterface.css  ChatInterface.tsx  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/database/: mod.rs
src-tauri/src/port/: android.rs  linux.rs
src-tauri/supply-chain/: config.toml
src/routes/: +page.svelte
