[package]
name = "appcore"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rusqlite = "0.7.0"
ed25519-dalek = { version = "2", features = ["pkcs8", "zeroize", "rand_core"] }
libp2p = { version = "0.56.0", features = [] }
quinn = "0.11.9"
