[package]
name = "mychat_core"
version = "0.0.1"
edition = "2024"
description = "Securitycore of mychat"
authors = ["Wang yuxuan ", "3589206993@qq.com"]
license = "AGPL-3.0-only"

[lib]
crate-type = ["lib"]
[dependencies]
ring = { version = "0.17", default-features = false, features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "zeroize", "rand_core"] }
thiserror = "2.0.18"
subtle = "2.6.1"
getrandom = { version = "0.3.4", features = ["std"] }


# 硬件密钥访问（平台特定）
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android-activity = { version = "0.6", features = ["native-activity"] }

[target.'cfg(any(target_os = "ios"))'.dependencies]
security-framework = "3.5.1"
security-framework-sys = "2.0"
keyring = { version = "3", features = ["apple-native"] }

# Windows / Linux / macOS 通用
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
] }
tss-esapi = { version = "7.5", optional = true }
[profile.dev]
panic = "abort"

[profile.release]
# 生产配置：最大化安全性和性能
opt-level = 3
debug = false            # 无调试符号（或 limited）
debug-assertions = false
overflow-checks = true   # 保持溢出检查（安全关键）
lto = "fat"              # 全链接时优化，消除死代码
panic = "abort"          # 无 unwinding
codegen-units = 1        # 单代码生成单元，最大化优化
strip = "symbols"        # 剥离符号
rpath = false
[package.metadata.cargo-deny]
# 禁止不安全代码的依赖
multiple-versions = "warn"
wildcards = "allow"
highlight = "all"

skip = []
skip-tree = []
[lints.rust]
unsafe_code = "forbid"
