[package]
name = "chat_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
quinn = "0.11.9"
rootcell = { workspace = true }

tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = "1.49.0"
[package.metadata.docs.rs]
# docs.rs 构建时使用
no-deps = true
