[package]
name = "chat-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
chat_core = { workspace = true }
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
socket2 = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
hex = "0.4"
serde_json = "1.0.149"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
[package.metadata.docs.rs]
# docs.rs 构建时使用
no-deps = true
