[package]
name = "myapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["Wang yuxuan ", "3589206993@qq.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"


libp2p = { version = "0.53", features = [
    "quic",
    "kad",
    "mdns",
    "request-response",
] }
quinn = "0.11.9"
libsm = "0.6.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.0-rc.2"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。
lto = false

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = 3     # 's'优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
