[package]
name = "myapp"
version = "0.0.1"
description = "A Tauri App"
authors = ["Wang yuxuan ", "3589206993@qq.com"]
edition = "2021"
license = "AGPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "myapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
rootcell = { workspace = true }
chat_core = { workspace = true }
tokio-rusqlite = "0.7.0"


tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }


tauri-plugin-barcode-scanner = "2"
tauri-plugin-os = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[profile.tauri-release]
inherits = "release"
opt-level = "s"
